<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ll_match_content_ver"
    android:background="@color/gray_eeeeee">


    <include layout="@layout/activity_base_title_bar" />

    <View
        style="@style/line_1"
        android:layout_marginTop="@dimen/px_14" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_icon" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/next" />

            <ImageView
                android:id="@+id/tv_icon_basic_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_right"
                android:src="@drawable/tongxun" />
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_name" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入用户名名" />
    </LinearLayout>

    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_true_name" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入真实姓名" />
    </LinearLayout>
    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_sex" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入姓别" />
    </LinearLayout>

    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_id_card" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入身份证号" />
    </LinearLayout>

    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_email" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入邮箱" />
    </LinearLayout>

    <View style="@style/line_1" />
    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_phone_num" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入手机号" />
    </LinearLayout>
    <View
        style="@style/line_1"
        android:layout_marginTop="@dimen/px_14" />



    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_fix_num" />

        <EditText
            style="@style/basic_infor_edittext_weight"
            android:text="请输入固定电话" />
    </LinearLayout>

    <View style="@style/line_1" />

    <LinearLayout style="@style/basic_infor_ll_weight">

        <TextView
            style="@style/basic_infor_TextView_333333"
            android:text="@string/basic_information_safe" />

        <TextView
            style="@style/basic_infor_edittext_weight"
            android:drawableRight="@drawable/next"
            android:text="可修改密码" />
    </LinearLayout>

    <View style="@style/line_1" />
</LinearLayout>
