<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_base_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                style="@style/line_1"
                android:layout_marginTop="@dimen/px_14" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_goods_image" />

                <TextView
                    android:id="@+id/tv_goods_image_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:drawableRight="@drawable/next"
                    android:hint="已上传货物图片" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_huo_quan" />

                <TextView
                    android:id="@+id/tv_huo_quan_image_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:drawableRight="@drawable/next"
                    android:hint="已上传货权图片" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_goods_name" />

                <TextView
                    android:id="@+id/et_goods_name_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="精选小米" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_cangdanhao" />

                <TextView
                    android:id="@+id/tv_cangdanhao_pick_infod"
                    style="@style/guadan_edittext_weight"
                    android:text="16558764734" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_goods_kind" />

                <TextView
                    android:id="@+id/tv_goods_kind_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="粮食-小米" />
            </LinearLayout>

            <View style="@style/line_1" />


            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_use_weight" />

                <TextView
                    android:id="@+id/tv_use_weight_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="50吨" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_in_time" />

                <TextView
                    android:id="@+id/tv_in_time_gua_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="2015-11-11" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_goods_ara" />

                <TextView
                    android:id="@+id/tv_goods_area_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="山东" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="货物质量" />

                <TextView
                    android:id="@+id/tv_quality_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="一般" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="提货数量" />

                <EditText
                    android:id="@+id/et_pick_weight_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:hint="请输入提货数量" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_xue_tou" />

                <TextView
                    android:id="@+id/tv_xue_tou_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="mark" />
            </LinearLayout>

            <View style="@style/line_1" />


            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_cang_name" />

                <TextView
                    android:id="@+id/tv_cang_name_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="仓管名称" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_cang_phone" />

                <TextView
                    android:id="@+id/tv_cang_phone_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:inputType="phone"
                    android:text="仓管电话" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_cang_email" />

                <TextView
                    android:id="@+id/tv_cang_email_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:inputType="textEmailAddress"
                    android:text="仓管邮箱" />
            </LinearLayout>

            <View style="@style/line_1" />

            <LinearLayout style="@style/guadan_ll_weight">

                <TextView
                    style="@style/guadan_TextView_333333"
                    android:text="@string/gua_dan_cang_address" />

                <TextView
                    android:id="@+id/tv_cang_address_pick_info"
                    style="@style/guadan_edittext_weight"
                    android:text="仓管地址" />
            </LinearLayout>

            <View style="@style/line_1" />


            <TextView
                android:id="@+id/tv_buyer_pick_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_70"
                android:layout_marginLeft="@dimen/px_25"
                android:layout_marginRight="@dimen/px_14"
                android:background="@color/gray_eeeeee"
                android:drawableRight="@drawable/tianjia"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/px_5"
                android:paddingTop="@dimen/px_5"
                android:text="指定司机"
                android:textColor="@color/textcolor_333333" />

            <View style="@style/line_1" />
            <com.aglook.comapp.view.MyListView
                android:id="@+id/lv_pick_info"
                android:layout_width="match_parent"
                android:divider="@null"
                android:layout_height="wrap_content"></com.aglook.comapp.view.MyListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
